--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
@@ -4,7 +4,7 @@
     annotations:
       description: Cluster has overcommitted CPU resource requests for Pods and cannot
         tolerate node failure.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecpuovercommit
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubecpuovercommit
       summary: Cluster has overcommitted CPU resource requests.
     expr: |
       sum(namespace:kube_pod_container_resource_requests_cpu_cores:sum{})
@@ -19,7 +19,7 @@
     annotations:
       description: Cluster has overcommitted memory resource requests for Pods and
         cannot tolerate node failure.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubememoryovercommit
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubememoryovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
       sum(namespace:kube_pod_container_resource_requests_memory_bytes:sum{})
@@ -35,7 +35,7 @@
   - alert: KubeCPUQuotaOvercommit
     annotations:
       description: Cluster has overcommitted CPU resource requests for Namespaces.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubecpuquotaovercommit
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubecpuquotaovercommit
       summary: Cluster has overcommitted CPU resource requests.
     expr: |
       sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="cpu"})
@@ -48,12 +48,12 @@
   - alert: KubeMemoryQuotaOvercommit
     annotations:
       description: Cluster has overcommitted memory resource requests for Namespaces.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubememoryquotaovercommit
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubememoryquotaovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
       sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="memory"})
         /
-      sum(kube_node_status_allocatable_memory_bytes{job="node-exporter"})
+      sum(kube_node_status_allocatable_memory_bytes{job="kube-state-metrics"})
         > 1.5
     for: 5m
     labels:
@@ -62,7 +62,7 @@
     annotations:
       description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubequotaalmostfull
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubequotaalmostfull
       summary: Namespace quota is going to be full.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
@@ -76,7 +76,7 @@
     annotations:
       description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubequotafullyused
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubequotafullyused
       summary: Namespace quota is fully used.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
@@ -90,7 +90,7 @@
     annotations:
       description: Namespace {{ $labels.namespace }} is using {{ $value | humanizePercentage
         }} of its {{ $labels.resource }} quota.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubequotaexceeded
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubequotaexceeded
       summary: Namespace quota has exceeded the limits.
     expr: |
       kube_resourcequota{job="kube-state-metrics", type="used"}
@@ -105,7 +105,7 @@
       description: '{{ $value | humanizePercentage }} throttling of CPU in namespace
         {{ $labels.namespace }} for container {{ $labels.container }} in pod {{ $labels.pod
         }}.'
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-cputhrottlinghigh
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/cputhrottlinghigh
       summary: Processes experience elevated CPU throttling.
     expr: |
       sum(increase(container_cpu_cfs_throttled_periods_total{container!="", namespace !~ "monitoring-.*(exporter|metrics)", container != "prometheus-config-reloader"}[5m])) by (container, pod, namespace)
