--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -5,7 +5,7 @@
       description: The PersistentVolume claimed by {{ $labels.persistentvolumeclaim
         }} in Namespace {{ $labels.namespace }} is only {{ $value | humanizePercentage
         }} free.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefillingup
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepersistentvolumefillingup
       summary: PersistentVolume is filling up.
     expr: |
       kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}
@@ -20,7 +20,7 @@
       description: Based on recent sampling, the PersistentVolume claimed by {{ $labels.persistentvolumeclaim
         }} in Namespace {{ $labels.namespace }} is expected to fill up within four
         days. Currently {{ $value | humanizePercentage }} is available.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumefillingup
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepersistentvolumefillingup
       summary: PersistentVolume is filling up.
     expr: |
       (
@@ -37,7 +37,7 @@
     annotations:
       description: The persistent volume {{ $labels.persistentvolume }} has status
         {{ $labels.phase }}.
-      runbook_url: https://github.com/kubernetes-monitoring/kubernetes-mixin/tree/master/runbook.md#alert-name-kubepersistentvolumeerrors
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/kubepersistentvolumeerrors
       summary: PersistentVolume is having issues with provisioning.
     expr: |
       kube_persistentvolume_status_phase{phase=~"Failed|Pending",job="kube-state-metrics"} > 0
