--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/prometheus.alerts.yaml
@@ -202,3 +202,15 @@
     for: 15m
     labels:
       severity: warning
+  - alert: PrometheusTargetLimitHit
+    annotations:
+      description: Prometheus {{$labels.namespace}}/{{$labels.pod}} has dropped {{
+        printf "%.0f" $value }} targets because the number of targets exceeded the
+        configured target_limit.
+      summary: Prometheus has dropped targets because some scrape configs have exceeded
+        the targets limit.
+    expr: |
+      increase(prometheus_target_scrape_pool_exceeded_target_limit_total{job="prometheus-k8s",namespace="monitoring"}[5m]) > 0
+    for: 15m
+    labels:
+      severity: warning
