--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/servicemonitorCustomResourceDefinition.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/servicemonitorCustomResourceDefinition.yaml
@@ -2,7 +2,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.4
+    controller-gen.kubebuilder.io/version: v0.4.1
   creationTimestamp: null
   name: servicemonitors.monitoring.coreos.com
 spec:
@@ -190,7 +190,7 @@ spec:
                       description: TLS configuration to use when scraping the endpoint
                       properties:
                         ca:
-                          description: Stuct containing the CA cert to use for the targets.
+                          description: Struct containing the CA cert to use for the targets.
                           properties:
                             configMap:
                               description: ConfigMap containing data to use for the targets.
@@ -349,6 +349,10 @@ spec:
                 items:
                   type: string
                 type: array
+              targetLimit:
+                description: TargetLimit defines a limit on the number of scraped targets that will be accepted.
+                format: int64
+                type: integer
             required:
             - endpoints
             - selector
