--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/alertmanager.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/config/prometheus/rules/kube-prometheus/alertmanager.alerts.yaml
@@ -52,17 +52,36 @@
         }} sent from any instance in the {{$labels.job}} cluster is {{ $value | humanizePercentage
         }}.
       runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerclusterfailedtosendalerts
-      summary: All Alertmanager instances in a cluster failed to send notifications.
+      summary: All Alertmanager instances in a cluster failed to send notifications
+        to a critical integration.
     expr: |
-      min by (namespace,service) (
-        rate(alertmanager_notifications_failed_total{job="alertmanager-k8s",namespace="monitoring"}[5m])
+      min by (namespace,service, integration) (
+        rate(alertmanager_notifications_failed_total{job="alertmanager-k8s",namespace="monitoring", integration=~`.*`}[5m])
       /
-        rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring"}[5m])
+        rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring", integration=~`.*`}[5m])
       )
       > 0.01
     for: 5m
     labels:
       severity: critical
+  - alert: AlertmanagerClusterFailedToSendAlerts
+    annotations:
+      description: The minimum notification failure rate to {{ $labels.integration
+        }} sent from any instance in the {{$labels.job}} cluster is {{ $value | humanizePercentage
+        }}.
+      runbook_url: https://github.com/prometheus-operator/kube-prometheus/wiki/alertmanagerclusterfailedtosendalerts
+      summary: All Alertmanager instances in a cluster failed to send notifications
+        to a non-critical integration.
+    expr: |
+      min by (namespace,service, integration) (
+        rate(alertmanager_notifications_failed_total{job="alertmanager-k8s",namespace="monitoring", integration!~`.*`}[5m])
+      /
+        rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring", integration!~`.*`}[5m])
+      )
+      > 0.01
+    for: 5m
+    labels:
+      severity: warning
   - alert: AlertmanagerConfigInconsistent
     annotations:
       description: Alertmanager instances within the {{$labels.job}} cluster have
