--- a/ansible/install_applications/vars/download-deluge.yml
+++ b/ansible/install_applications/vars/download-deluge.yml
@@ -4,6 +4,7 @@
 _deluge_var_loader:
   base_image:
     name: "emmercm/libtorrent"
+    # v1.2.12+ and v2+ don't provide python2 bindings
     tag: "1.2.11-alpine"
   version: 2.0.3
 
