--- a/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/mandatory.yaml
+++ b/ansible/install_infra/roles/kubernetes-infra/app/ingress-nginx/deploy/mandatory.yaml
@@ -15,7 +15,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: ingress-nginx
@@ -27,7 +27,7 @@ metadata:
 #  labels:
 #    app.kubernetes.io/name: ingress-nginx
 #    app.kubernetes.io/instance: ingress-nginx
-#    app.kubernetes.io/version: 0.43.0
+#    app.kubernetes.io/version: 0.44.0
 #    app.kubernetes.io/component: controller
 #  name: ingress-nginx-controller
 #  namespace: ingress-nginx
@@ -40,7 +40,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
   name: ingress-nginx
   namespace: ingress-nginx
 rules:
@@ -68,7 +68,6 @@ rules:
     verbs:
       - get
       - list
-      - update
       - watch
   - apiGroups:
       - extensions
@@ -109,7 +108,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
   name: ingress-nginx
   namespace: ingress-nginx
 roleRef:
@@ -128,7 +127,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: ingress-nginx
@@ -157,7 +156,6 @@ rules:
     verbs:
       - get
       - list
-      - update
       - watch
   - apiGroups:
       - extensions
@@ -201,14 +199,6 @@ rules:
   - apiGroups:
       - ''
     resources:
-      - endpoints
-    verbs:
-      - create
-      - get
-      - update
-  - apiGroups:
-      - ''
-    resources:
       - events
     verbs:
       - create
@@ -221,7 +211,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: controller
   name: ingress-nginx
   namespace: ingress-nginx
@@ -241,7 +231,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller-admission
   namespace: ingress-nginx
@@ -264,7 +254,7 @@ spec:
 #  labels:
 #    app.kubernetes.io/name: ingress-nginx
 #    app.kubernetes.io/instance: ingress-nginx
-#    app.kubernetes.io/version: 0.43.0
+#    app.kubernetes.io/version: 0.44.0
 #    app.kubernetes.io/component: controller
 #  name: ingress-nginx-controller
 #  namespace: ingress-nginx
@@ -291,7 +281,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: controller
   name: ingress-nginx-controller
   namespace: ingress-nginx
@@ -313,8 +303,8 @@ spec:
       dnsPolicy: ClusterFirst
       containers:
         - name: controller
-          image: k8s.gcr.io/ingress-nginx/controller:v0.43.0@sha256:9bba603b99bf25f6d117cf1235b6598c16033ad027b143c90fa5b3cc583c5713
-          imagePullPolicy: Always
+          image: k8s.gcr.io/ingress-nginx/controller:v0.44.0@sha256:3dd0fac48073beaca2d67a78c746c7593f9c575168a17139a9955a82c63c4b9a
+          imagePullPolicy: IfNotPresent
           lifecycle:
             preStop:
               exec:
@@ -405,7 +395,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   name: ingress-nginx-admission
 webhooks:
@@ -443,7 +433,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 ---
@@ -458,7 +448,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 rules:
@@ -481,7 +471,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
 roleRef:
   apiGroup: rbac.authorization.k8s.io
@@ -503,7 +493,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 rules:
@@ -526,7 +516,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 roleRef:
@@ -549,7 +539,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 spec:
@@ -559,12 +549,12 @@ spec:
       labels:
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/version: 0.43.0
+        app.kubernetes.io/version: 0.44.0
         app.kubernetes.io/component: admission-webhook
     spec:
       containers:
         - name: create
-          image: docker.io/jettech/kube-webhook-certgen:v1.5.0
+          image: docker.io/jettech/kube-webhook-certgen:v1.5.1
           imagePullPolicy: IfNotPresent
           args:
             - create
@@ -593,7 +583,7 @@ metadata:
   labels:
     app.kubernetes.io/name: ingress-nginx
     app.kubernetes.io/instance: ingress-nginx
-    app.kubernetes.io/version: 0.43.0
+    app.kubernetes.io/version: 0.44.0
     app.kubernetes.io/component: admission-webhook
   namespace: ingress-nginx
 spec:
@@ -603,12 +593,12 @@ spec:
       labels:
         app.kubernetes.io/name: ingress-nginx
         app.kubernetes.io/instance: ingress-nginx
-        app.kubernetes.io/version: 0.43.0
+        app.kubernetes.io/version: 0.44.0
         app.kubernetes.io/component: admission-webhook
     spec:
       containers:
         - name: patch
-          image: docker.io/jettech/kube-webhook-certgen:v1.5.0
+          image: docker.io/jettech/kube-webhook-certgen:v1.5.1
           imagePullPolicy: IfNotPresent
           args:
             - patch
