Tune fluentd es plugin to avoid timeouts

--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/config/includes/output_50_elasticsearch.conf
@@ -19,8 +19,9 @@
    logstash_format true
    type_name fluentd
    suppress_type_name true
+   request_timeout "#{ENV['FLUENT_REQUEST_TIMEOUT'] || '5s'}"
    <buffer>
-     flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '8'}"
+     flush_thread_count "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_THREAD_COUNT'] || '1'}"
      flush_interval "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_FLUSH_INTERVAL'] || '5s'}"
      chunk_limit_size "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_CHUNK_LIMIT_SIZE'] || '2M'}"
      queue_limit_length "#{ENV['FLUENT_ELASTICSEARCH_BUFFER_QUEUE_LIMIT_LENGTH'] || '32'}"
