Pin Kubernetes version

--- a/ansible/install_infra/roles/kubernetes-node-preinstall/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes-node-preinstall/tasks/main.yml
@@ -33,6 +33,11 @@
     repo: "deb https://apt.kubernetes.io/ kubernetes-xenial main"
     state: present
 
+- name: Pin Kubernetes version
+  template:
+    src: apt_kubernetes.j2
+    dest: /etc/apt/preferences.d/kubernetes
+
 - name: Install Kubernetes
   apt:
     pkg:
