--- a/ansible/install_infra/roles/kubernetes-node-preinstall/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes-node-preinstall/defaults/main.yml
@@ -1,5 +1,7 @@
 ---
 
+kubernetes_version: 1.19.0-00
+
 kubernetes_kubelet_system_reserved_cpu: 500m
 kubernetes_kubelet_system_reserved_memory: 512M
 
