--- a/ansible/install_applications/vars/infra-pihole.yml
+++ b/ansible/install_applications/vars/infra-pihole.yml
@@ -24,8 +24,8 @@ pihole:
     image: "{{ docker_registry.url }}/{{ _pihole_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _pihole_var_loader.base_image.tag }}"
     requests_cpu: "{{ pihole_container_requests_cpu | default('25m') }}"
     requests_memory: "{{ pihole_container_requests_memory | default('128Mi') }}"
-    limits_cpu: "{{ pihole_container_limits_cpu | default('100m') }}"
-    limits_memory: "{{ pihole_container_limits_memory | default('128Mi') }}"
+    limits_cpu: "{{ pihole_container_limits_cpu | default('250m') }}" # Web UI requires more CPU, but is rarely used
+    limits_memory: "{{ pihole_container_limits_memory | default('192Mi') }}"
 
   context_root: '/pihole'
   web_password: "{{ pihole_web_password | default('clear_password') }}"
