--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -7,6 +7,12 @@ node-home ansible_host=192.168.100.14
 [controller]
 master-1
 
+[all_hosts]
+master-1
+master-2
+master-3
+node-home
+
 [dns_servers]
 master-1
 master-2
