Move kubernetes-master-cni-deploy on controller host

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -79,6 +79,10 @@
   hosts: kubernetes_master_bootstrap
   roles:
     - kubernetes-master-bootstrap
+
+- name: Deploy CNI
+  hosts: controller
+  roles:
     - kubernetes-master-cni-deploy
 
 - name: Provision Kubernetes nodes
