Split apcups role to have a dedicated apcups-kubernetes role

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -8,6 +8,11 @@
     - firewall
     - usb-serial
 
+- name: Provision APC UPS
+  hosts: apcups
+  roles:
+    - apcups
+
 - name: Provision bluetooth
   hosts: bluetooth
   roles:
@@ -97,8 +102,4 @@
   roles:
     - { role: kubernetes-storage-distributed, tags: kubernetes-storage }
     - kubernetes-infra
-
-- name: Provision APC UPS
-  hosts: apcups
-  roles:
-    - apcups
+    - apcups-kubernetes
