Install all ansible python requirements in venv, and use it for the python interpreter on controller

--- a/ansible/inventories/vagrant/inventory.ini
+++ b/ansible/inventories/vagrant/inventory.ini
@@ -5,7 +5,7 @@ master-3 ansible_host=192.168.100.13
 node-home ansible_host=192.168.100.14
 
 [controller]
-localhost
+localhost ansible_python_interpreter=/root/ansible_venv/bin/python
 
 [all_hosts]
 master-1
