Configure the controller to have a valid kubeconfig

--- a/ansible/install_infra/site.yml
+++ b/ansible/install_infra/site.yml
@@ -84,6 +84,11 @@
   roles:
     - kubernetes-master-bootstrap
 
+- name: Bootstrap controller
+  hosts: controller
+  roles:
+    - kubernetes-controller-bootstrap
+
 - name: Deploy CNI
   hosts: controller
   roles:
