Add support to allow multiple users to use kubectl

--- a/ansible/install_infra/roles/kubernetes-node-postinstall/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes-node-postinstall/defaults/main.yml
@@ -1,8 +1,9 @@
 ---
 
-kubernetes_user:
-  name: "{{ standard_user.name }}"
-  home: "{{ standard_user.home }}"
+kubernetes_users:
+  - name: "{{ standard_user.name }}"
+    home: "{{ standard_user.home }}"
+    install_autocomplete: yes
 
 #kubernetes_node_labels:
 #  - name: foo
